add api_pointer to linux compilation process

--- a/scilab/modules/api_scilab/Makefile.am
+++ b/scilab/modules/api_scilab/Makefile.am
@@ -12,7 +12,8 @@ src/c/api_int.c \
 src/c/api_list.c \
 src/c/api_poly.c \
 src/c/api_sparse.c \
-src/c/api_string.c
+src/c/api_string.c \
+src/c/api_pointer.c
 
 
 libsciapi_scilab_la_CFLAGS=-I$(srcdir)/includes/ \
