Need operations include for compilation

--- a/scilab/modules/api_scilab/Makefile.am
+++ b/scilab/modules/api_scilab/Makefile.am
@@ -22,7 +22,8 @@ libsciapi_scilab_la_CFLAGS=-I$(srcdir)/includes/ \
 -I$(top_srcdir)/modules/call_scilab/includes \
 -I$(top_srcdir)/libs/MALLOC/includes/ \
 -I$(top_srcdir)/modules/output_stream/includes \
--I$(top_srcdir)/modules/string/includes
+-I$(top_srcdir)/modules/string/includes \
+-I$(top_srcdir)/modules/operations/includes
 
 
 pkglib_LTLIBRARIES = libsciapi_scilab.la
