--- a/scilab/modules/hdf5/Makefile.am
+++ b/scilab/modules/hdf5/Makefile.am
@@ -34,6 +34,7 @@ libscihdf5_la_CXXFLAGS=	-I$(srcdir)/includes/ \
 				-I$(top_srcdir)/libs/MALLOC/includes/ \
 				-I$(top_srcdir)/modules/output_stream/includes \
 				-I$(top_srcdir)/modules/api_scilab/includes \
+				-I$(top_srcdir)/modules/operations/includes \
 				$(HDF5_CFLAGS)
 
 libscihdf5_la_CFLAGS=		-I$(srcdir)/includes/ \
@@ -42,6 +43,7 @@ libscihdf5_la_CFLAGS=		-I$(srcdir)/includes/ \
 				-I$(top_srcdir)/modules/output_stream/includes \
 				-I$(top_srcdir)/modules/api_scilab/includes \
 				-I$(top_srcdir)/modules/localization/includes \
+				-I$(top_srcdir)/modules/operations/includes \
 				$(HDF5_CFLAGS)
 
 
