--- a/scilab/etc/classpath.xml.in
+++ b/scilab/etc/classpath.xml.in
@@ -50,6 +50,9 @@ The option is "disableUnderMode" and can be:
         <load on="hdf5BasedFeature"/>
 </path>
 
+<!-- Temp. loaded at startup -->
+<path value="$SCILAB/modules/hdf5/jar/org.scilab.modules.hdf5.jar" load="startup"/>
+
 <!-- Documentation (not mandatory) -->
 <path value="@JEUCLID_CORE@" load="onUse">
 	<load on="documentationGeneration"/>
