--- a/scilab/modules/hdf5/src/java/hdf5-JAVA.vcproj
+++ b/scilab/modules/hdf5/src/java/hdf5-JAVA.vcproj
@@ -109,6 +109,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 		</Filter>
+		<File
+			RelativePath="..\..\build.xml"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
