--- a/scilab/scilab-lib.properties.in
+++ b/scilab/scilab-lib.properties.in
@@ -52,3 +52,5 @@ library.graphic_export.name=org.scilab.modules.graphic_export.jar
 library.javasci.dir=${modules.dir}/javasci/${build.jar.dir}/
 library.javasci.name=javasci.jar
 
+library.hdf5.dir=${modules.dir}/hdf5/${build.jar.dir}/
+library.hdf5.name=org.scilab.modules.hdf5.jar
