--- a/scilab/etc/modules.xml.in
+++ b/scilab/etc/modules.xml.in
@@ -83,4 +83,5 @@
 <module name="atoms" activate="yes"/>
 <module name="matio" activate="@MATIO_ENABLE@"/>
 <module name="hdf5" activate="yes"/>
+<module name="xpad" activate="@XPAD_ENABLE@"/>
 </modules>
