--- a/scilab/scilab-lib.properties.in
+++ b/scilab/scilab-lib.properties.in
@@ -54,3 +54,6 @@ library.javasci.name=javasci.jar
 
 library.hdf5.dir=${modules.dir}/hdf5/${build.jar.dir}/
 library.hdf5.name=org.scilab.modules.hdf5.jar
+
+library.xpad.dir=${modules.dir}/xpad/${build.jar.dir}/
+library.xpad.name=org.scilab.modules.xpad.jar
