--- a/scilab/configure.ac
+++ b/scilab/configure.ac
@@ -648,6 +648,11 @@ if test "$with_javasci" != no -o "$with_gui" != no -o "$enable_build_help" != no
 
 		if test "$with_gui" != no; then
 
+				# jgraphx
+				AC_JAVA_CHECK_PACKAGE([jgraphx],[com.mxgraph.model.mxCell],[JGraph X])
+				JGRAPHX=$PACKAGE_JAR_FILE
+				AC_SUBST(JGRAPHX)
+
 				# Docking system
 				AC_JAVA_CHECK_PACKAGE([flexdock],[org.flexdock.docking.DockingManager],[Scilab Gui])
 				FLEXDOCK=$PACKAGE_JAR_FILE
@@ -1725,6 +1730,7 @@ echo "  Gluegen ............. = $GLUEGEN_RT"
 echo "  Jrosetta (API) ...... = $JROSETTA_API"
 echo "  Jrosetta (Engine) ... = $JROSETTA_ENGINE"
 echo "  Commons Logging ..... = $COMMONS_LOGGING"
+echo "  JGraph X ............ = $JGRAPHX"
 fi
 
 echo "" 
