Linux compilation and install

--- a/scilab/modules/api_scilab/Makefile.in
+++ b/scilab/modules/api_scilab/Makefile.in
@@ -400,10 +400,11 @@ includes/api_common.h \
 includes/api_double.h \
 includes/api_int.h \
 includes/api_list.h \
+includes/api_pointer.h \
 includes/api_poly.h \
 includes/api_sparse.h \
 includes/api_string.h \
-includes/api_variable.h \
+includes/api_scilab.h \
 includes/dynlib_api_scilab.h
 
 
