--- a/scilab/configure.ac
+++ b/scilab/configure.ac
@@ -1470,6 +1470,7 @@ modules/simulated_annealing/Makefile
 modules/parameters/Makefile
 modules/matio/Makefile
 modules/atoms/Makefile
+modules/xcos/Makefile
 modules/Makefile
 libs/Makefile
 Makefile
