--- a/scilab/scilab-lib.properties.in
+++ b/scilab/scilab-lib.properties.in
@@ -13,6 +13,8 @@ gluegen.jar=@GLUEGEN_RT@
 
 jhdf5.jar=@JHDF5@
 
+jgraphx.jar=@JGRAPHX@
+
 jrosetta-API.jar=@JROSETTA_API@
 
 jrosetta-engine.jar=@JROSETTA_ENGINE@
@@ -54,3 +56,6 @@ library.javasci.name=javasci.jar
 
 library.hdf5.dir=${modules.dir}/hdf5/${build.jar.dir}/
 library.hdf5.name=org.scilab.modules.hdf5.jar
+
+library.xcos.dir=${modules.dir}/xcos/${build.jar.dir}/
+library.xcos.name=org.scilab.modules.xcos.jar
