--- a/scilab/modules/gui/src/c/gui.vcproj
+++ b/scilab/modules/gui/src/c/gui.vcproj
@@ -561,6 +561,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\cpp\GetUimenuChecked.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\cpp\GetUimenuLabel.cpp"
 				>
 			</File>
@@ -866,6 +870,10 @@
 			</File>
 			<File
 				RelativePath="..\cpp\SetUicontrolVerticalAlignment.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\cpp\SetUimenuChecked.cpp"
 				>
 			</File>
 			<File
@@ -1246,6 +1254,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\includes\GetUimenuChecked.h"
+				>
+			</File>
+			<File
+				RelativePath="..\cpp\GetUimenuChecked.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\includes\GetUimenuLabel.h"
 				>
 			</File>
@@ -1559,6 +1575,14 @@
 			</File>
 			<File
 				RelativePath="..\cpp\SetUicontrolVerticalAlignment.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\includes\SetUimenuChecked.h"
+				>
+			</File>
+			<File
+				RelativePath="..\cpp\SetUimenuChecked.hxx"
 				>
 			</File>
 			<File
