--- a/scilab/modules/io/Makefile.in
+++ b/scilab/modules/io/Makefile.in
@@ -112,14 +112,14 @@ am__objects_1 = libsciio_la-getpidc.lo libsciio_la-setenvc.lo \
 am__objects_2 = v2unit.lo newsave.lo v2cunit.lo writebuf.lo
 am__objects_3 = libsciio_la-sci_read4b.lo libsciio_la-sci_getio.lo \
 	libsciio_la-sci_readb.lo libsciio_la-sci_host.lo \
-	libsciio_la-sci_file.lo libsciio_la-intsetenv.lo \
-	libsciio_la-sci_rat.lo libsciio_la-sci_getenv.lo \
-	libsciio_la-sci_write.lo libsciio_la-sci_writeb.lo \
-	libsciio_la-sci_setenv.lo libsciio_la-gw_io.lo \
-	libsciio_la-sci_mgetl.lo libsciio_la-sci_diary.lo \
-	libsciio_la-sci_read.lo libsciio_la-sci_getpid.lo \
-	libsciio_la-sci_write4b.lo libsciio_la-sci_load.lo \
-	libsciio_la-sci_unix.lo libsciio_la-sci_save.lo
+	libsciio_la-sci_file.lo libsciio_la-sci_rat.lo \
+	libsciio_la-sci_getenv.lo libsciio_la-sci_write.lo \
+	libsciio_la-sci_writeb.lo libsciio_la-sci_setenv.lo \
+	libsciio_la-gw_io.lo libsciio_la-sci_mgetl.lo \
+	libsciio_la-sci_diary.lo libsciio_la-sci_read.lo \
+	libsciio_la-sci_getpid.lo libsciio_la-sci_write4b.lo \
+	libsciio_la-sci_load.lo libsciio_la-sci_unix.lo \
+	libsciio_la-sci_save.lo
 am__objects_4 = intwrite4b.lo intrat.lo intwritb.lo intwrite.lo \
 	intread4b.lo intread.lo intreadb.lo intfile.lo
 am_libsciio_la_OBJECTS = $(am__objects_1) $(am__objects_2) \
@@ -396,7 +396,6 @@ sci_gateway/c/sci_getio.c \
 sci_gateway/c/sci_readb.c \
 sci_gateway/c/sci_host.c \
 sci_gateway/c/sci_file.c \
-sci_gateway/c/intsetenv.c \
 sci_gateway/c/sci_rat.c \
 sci_gateway/c/sci_getenv.c \
 sci_gateway/c/sci_write.c \
@@ -614,7 +613,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciio_la-getenvc.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciio_la-getpidc.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciio_la-gw_io.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciio_la-intsetenv.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciio_la-sci_diary.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciio_la-sci_file.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciio_la-sci_getenv.Plo@am__quote@
@@ -726,13 +724,6 @@ libsciio_la-sci_file.lo: sci_gateway/c/sci_file.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='sci_gateway/c/sci_file.c' object='libsciio_la-sci_file.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libsciio_la_CPPFLAGS) $(CPPFLAGS) $(libsciio_la_CFLAGS) $(CFLAGS) -c -o libsciio_la-sci_file.lo `test -f 'sci_gateway/c/sci_file.c' || echo '$(srcdir)/'`sci_gateway/c/sci_file.c
-
-libsciio_la-intsetenv.lo: sci_gateway/c/intsetenv.c
-@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libsciio_la_CPPFLAGS) $(CPPFLAGS) $(libsciio_la_CFLAGS) $(CFLAGS) -MT libsciio_la-intsetenv.lo -MD -MP -MF $(DEPDIR)/libsciio_la-intsetenv.Tpo -c -o libsciio_la-intsetenv.lo `test -f 'sci_gateway/c/intsetenv.c' || echo '$(srcdir)/'`sci_gateway/c/intsetenv.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libsciio_la-intsetenv.Tpo $(DEPDIR)/libsciio_la-intsetenv.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='sci_gateway/c/intsetenv.c' object='libsciio_la-intsetenv.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libsciio_la_CPPFLAGS) $(CPPFLAGS) $(libsciio_la_CFLAGS) $(CFLAGS) -c -o libsciio_la-intsetenv.lo `test -f 'sci_gateway/c/intsetenv.c' || echo '$(srcdir)/'`sci_gateway/c/intsetenv.c
 
 libsciio_la-sci_rat.lo: sci_gateway/c/sci_rat.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libsciio_la_CPPFLAGS) $(CPPFLAGS) $(libsciio_la_CFLAGS) $(CFLAGS) -MT libsciio_la-sci_rat.lo -MD -MP -MF $(DEPDIR)/libsciio_la-sci_rat.Tpo -c -o libsciio_la-sci_rat.lo `test -f 'sci_gateway/c/sci_rat.c' || echo '$(srcdir)/'`sci_gateway/c/sci_rat.c
